- Optimizations and minors fixes - Code cleanup - Added sentry where applicable
Signed-off-by: skitou <chiantigally@gmail.com>